made requested changes for frontend integration